--- a/index.pug
+++ b/index.pug
@@ -4,10 +4,37 @@ html(lang="en")
         meta(charset="UTF-8")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         meta(http-equiv="X-UA-Compatible", content="ie=edge")
-        title 🙊
-        link(rel="stylesheet", href="bs.styl")
-        link(rel="icon" type="image/png" href="favicon.png")        
-
+        link(rel="stylesheet", href="reset.styl")
+        link(rel="stylesheet", href="style.styl")
+        title votebs
     body
-        h1 hi
-        script(src="bs.js")
+        .hero
+            .wrap
+                .toptext
+                    p vote boris
+                    p vote b**s
+                .bottext
+                    p A VOTE FOR BORIS IS A VOTE FOR BULLSHIT.
+        .content
+            .title
+                p
+                    |vote 4 boris
+                p
+                    |vote 4 b**s            
+            .desc
+                p.
+                    Whether he’s not dying in a ditch, making up NHS figures, fudging quotes or flat out lying about issues that will define our country, one thing is true - Boris stands for bullshit. He has form. It’s only fair really that we give Boris’ B***S the recognition it deserves.  
+            .title
+                p
+                    |gat b**s done
+                p
+                    |with the b**s 
+                p
+                    |instagram filter  
+            .desc
+                p.
+                    We’re inviting voters to help pay tribute to Boris’ BS whenever you see it, hear it or smell it during during the 2019 Election Campaign. Using our AR Instagram sticker you can call out Boris B***S, share it with your friends. Create your own B***S stories to rival Boris. 
+        
+        footer
+            img.bs(src="img/BS.png", alt="")
+        script(src="script.js")
