--- a/index.pug
+++ b/index.pug
@@ -8,7 +8,11 @@ html(lang="en")
         link(rel="stylesheet", href="style.styl")
         link(rel="icon" type="image/png" href="favicon.png")        
         title 🙊
-    body
+    body        
+        .download.floater
+            a(href="https://www.instagram.com/votebs/" target="_href")
+                | get the instagram filters!
+        .highlight.floater
         .hero
             .wrap
                 .toptext
@@ -27,7 +31,7 @@ html(lang="en")
                     Whether he’s not dying in a ditch, making up NHS figures, fudging quotes or flat out lying about issues that will define our country, one thing is true - Boris stands for bullshit. He has form. It’s only fair really that we give Boris’ B***S the recognition it deserves.  
             .title
                 p
-                    |gat b**s done
+                    |get b**s done
                 p
                     |with the b**s 
                 p
