--- a/style.styl
+++ b/style.styl
@@ -9,7 +9,7 @@ greno = #4DDF0C
   src url("fonts/inter.woff2")
 
 body
-    background black    
+    background black   
 .hero
     width 100vw
     height 100vh    
@@ -66,6 +66,37 @@ footer
 
 // DESKTOP
 @media screen and (min-width: 501px)
+    .floater
+        width 200px
+        height 200px 
+        position fixed
+        top 130px       
+    .highlight    
+        left 130px  
+        background url("highlight.png")    
+        z-index 2
+        background-size cover
+        animation-name spin
+        animation-duration 6s
+        animation-iteration-count infinite
+        animation-timing-function linear    
+    .download
+        left 150px 
+        z-index 3
+        color white
+        font-family dd
+        transform translate(0, 60px) rotate(-5deg)
+        text-align center
+        width 170px
+        font-size 21px
+        line-height 26px
+        &:hover ~ .highlight
+            animation-name spin
+            animation-duration 2s
+            animation-iteration-count infinite
+            animation-timing-function linear
+        a
+            color white
     .hero
         background url("img/hero.jpg")
         background-position center
@@ -87,7 +118,26 @@ footer
 
 // MOBILE
 @media screen and (max-width: 500px)
+    .floater 
+        position fixed
+        top 0
+        left 0
+        width 100%        
+        height 45px        
+    .highlight 
+        background greno
+        z-index 2
+    .download
+        z-index 3
+        font-family dd
+        text-align center 
+        a
+            font-size 18px
+            display block
+            margin-top 10px
+            color white               
     .hero
+        margin-top 30px
         background url("img/hero.jpg")
         background-position cover
         background-size 100%
@@ -105,3 +155,10 @@ footer
         height 40vw
         .bs
             width 80vw
+
+//animations
+@keyframes spin
+    from 
+        transform rotate(0deg)
+    to 
+        transform rotate(360deg)
